# ZIP

./: .gitignore  CMakeLists.txt  README.md  explain_64bits.cpp  main.cpp  test_address_logic.cpp
client/: main.cpp
client/include/: client.h  rdt_client.h  rdt_sender.h  zip_client.h
client/src/: client.cpp  rdt_client.cpp  rdt_sender.cpp  test.cpp  zip_client.cpp
server/: main.cpp
server/include/: rdt_mail.h  rdt_receiver.h  rdt_server.h  server.h  zip_server.h
server/src/: rdt_receiver.cpp  rdt_server.cpp  server.cpp  test.cpp  zip_server.cpp
shared/include/: locked_map.h  monitor.h  packet.h  print_utils.h  rdt_receiver.h  rdt_sender.h  reply.h  request.h  request_type.h  response.h  udp_socket.h
shared/src/: client_udp.c  packet.cpp  print_utils.cpp  rdt_receiver.cpp  rdt_sender.cpp  server_udp.c  test.cpp  test_receiver.cpp  test_sender.cpp  udp_socket.cpp
src/: test.cpp
tests/: main.cpp
tests/include/: subprocess.hpp
tests/src/: subprocess.cpp
